tests/integration/snapshots/integration__workspace_symbol__filter_type_figure.snap
---
source: tests/integration/workspace_symbol.rs
expression: "run(\"figure\")?"

---
[
  {
    "name": "Figure 1: Bar",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 15,
          "character": 0
        },
        "end": {
          "line": 19,
          "character": 12
        }
      }
    }
  }
]
